# gc-content

./: LICENSE  README.md  gc_content.py  main.py  pyproject.toml  requirements.txt
gc_content/: exceptions.py  gc_content.py
tests/: test_gc_content.py
tests/data/: test.fasta
