[build-system]
# Need a backend that uv supports (e.g., hatchling, poetry, setuptools, ...)
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gc-content"
version = "0.1.0"
authors = [
    { name = "Your Name" },
]
description = "A tool to calculate GC content in DNA sequences"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "boto3>=1.37.17"
]

[tool.mypy]
python_version = "3.12"  # Matching project's Python version
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
